--- a/projects/dashboard/package.json
+++ b/projects/dashboard/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@dsmartstocktz/dashboard",
+  "name": "@smartstocktz/dashboard",
   "version": "0.0.1",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/smartstocktz"
   },
   "repository": {
-    "url": "git://npm.pkg.github.com/smartstocktz/smartstock-dashboard.git"
+    "url": "git://github.com/smartstocktz/smartstock-dashboard.git"
   },
   "peerDependencies": {
     "@angular/common": "^10.1.6",
