--- a/projects/dashboard/package.json
+++ b/projects/dashboard/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@smartstocktz/dashboard",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/smartstocktz"
   },
   "repository": {
-    "url": "git://github.com/smartstocktz/smartstock-dashboard.git"
+    "type": "git",
+    "url": "https://github.com/smartstocktz/smartstock-dashboard.git"
   },
   "peerDependencies": {
     "@angular/common": "^10.1.6",
