--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "smartstock-dashboard",
-  "version": "0.0.4",
+  "name": "app-dashboard",
+  "version": "0.0.5",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,10 +20,10 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
-    "@smartstocktz/core-libs": "^0.0.25",
-    "bfastjs": "^4.0.8",
-    "moment": "^2.29.1",
+    "@smartstocktz/core-libs": "^0.0.29",
+    "bfastjs": "^4.1.2",
     "highcharts": "^8.2.2",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -32,9 +32,9 @@
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
