--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-dashboard",
-  "version": "0.0.5",
+  "version": "0.1.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,10 +20,11 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
-    "@smartstocktz/core-libs": "^0.0.29",
-    "bfastjs": "^4.1.2",
+    "@smartstocktz/core-libs": "~0.2.13",
+    "bfastjs": "^4.2.9",
     "highcharts": "^8.2.2",
     "moment": "^2.29.1",
+    "ngx-bottom-nav": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
