udpdate core libs

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
-    "@smartstocktz/core-libs": "~0.2.13",
-    "bfastjs": "^4.2.9",
+    "@smartstocktz/core-libs": "^0.2.15",
+    "bfastjs": "^4.5.0",
     "highcharts": "^8.2.2",
     "moment": "^2.29.1",
     "ngx-bottom-nav": "^11.0.0",
