--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-dashboard",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,36 +10,35 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "~11.0.5",
-    "@angular/cdk": "^11.0.3",
-    "@angular/common": "~11.0.5",
-    "@angular/compiler": "~11.0.5",
-    "@angular/core": "~11.0.5",
-    "@angular/forms": "~11.0.5",
-    "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "~11.0.5",
-    "@angular/platform-browser-dynamic": "~11.0.5",
-    "@angular/router": "~11.0.5",
+    "@angular/animations": "~12.1.3",
+    "@angular/cdk": "~12.1.3",
+    "@angular/common": "~12.1.3",
+    "@angular/compiler": "~12.1.3",
+    "@angular/core": "~12.1.3",
+    "@angular/forms": "~12.1.3",
+    "@angular/material": "^12.1.3",
+    "@angular/platform-browser": "~12.1.3",
+    "@angular/platform-browser-dynamic": "~12.1.3",
+    "@angular/router": "~12.1.3",
     "@smartstocktz/core-libs": "^0.2.15",
-    "bfastjs": "^4.5.0",
-    "highcharts": "^8.2.2",
+    "bfastjs": "~4.5.1-alpha.3",
+    "highcharts": "~9.1.2",
     "moment": "^2.29.1",
-    "ngx-bottom-nav": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.5",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler-cli": "~11.0.5",
+    "@angular-devkit/build-angular": "~12.1.3",
+    "@angular/cli": "~12.1.3",
+    "@angular/compiler-cli": "~12.1.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -48,6 +47,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.3.5"
   }
 }
