--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -c dev dashboard-mock",
-    "build": "ng build",
+    "build": "ng build -c production dashboard && cd dist/dashboard && npm publish --ignore-script",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.1.3",
     "@angular/router": "~12.1.3",
     "@smartstocktz/core-libs": "^0.2.15",
-    "bfastjs": "~4.5.1-alpha.3",
+    "bfast": "^5.0.0",
     "highcharts": "~9.1.2",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
