update core libs

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser": "~12.2.5",
     "@angular/platform-browser-dynamic": "~12.2.5",
     "@angular/router": "~12.2.5",
-    "@smartstocktz/core-libs": "^0.2.24",
-    "bfast": "^5.0.1",
+    "@smartstocktz/core-libs": "^0.3.2",
+    "bfast": "^5.4.14",
+    "comlink": "^4.3.1",
     "highcharts": "~9.2.2",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
