update core libs

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "~12.2.5",
     "@angular/platform-browser-dynamic": "~12.2.5",
     "@angular/router": "~12.2.5",
-    "@smartstocktz/core-libs": "^0.3.2",
-    "bfast": "^5.4.14",
+    "@smartstocktz/core-libs": "^0.3.3",
+    "bfast": "^6.0.0-alpha.0",
     "comlink": "^4.3.1",
     "highcharts": "~9.2.2",
     "moment": "^2.29.1",
