--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "box":"yarn install && yarn start",
+    "box": "yarn install && yarn start",
     "start": "ng serve -c dev dashboard-mock",
     "publish": "ng build -c production dashboard && cd dist/dashboard && npm publish --ignore-script",
     "test": "ng test",
@@ -21,11 +21,11 @@
     "@angular/platform-browser": "~13.0.2",
     "@angular/platform-browser-dynamic": "~13.0.2",
     "@angular/router": "~13.0.2",
-    "smartstockt-core": "^1.0.1",
-    "bfast": "^6.0.1",
+    "bfast": "6.0.1",
     "comlink": "^4.3.1",
     "highcharts": "~9.2.2",
     "rxjs": "~7.4.0",
+    "smartstock-core": "1.0.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
