--- a/projects/dashboard/package.json
+++ b/projects/dashboard/package.json
@@ -1,12 +1,11 @@
 {
   "name": "smartstock-dashboard",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/smartstocktz/smartstock-dashboard.git"
   },
-  "peerDependencies": {
-  },
+  "peerDependencies": {},
   "dependencies": {
     "tslib": "^2.0.0"
   }
